--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,4 @@ fabric.properties
 
 # idea folder, uncomment if you don't need it
 # .idea
+/src/data/neurons_explanations_embeddings_full_word2vec.npy
