--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,5 @@ fabric.properties
 # idea folder, uncomment if you don't need it
 # .idea
 /src/data/neurons_explanations_embeddings_full_word2vec.npy
+
+/ProjectEnv
