--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-numpy
-pandas
-matplotlib
-sentence-transformers
-scikit-learn
-top2vec
+numpy~=1.24.4
+pandas~=2.0.3
+matplotlib~=3.7.2
+sentence_transformers
+sklearn
+bertopic~=0.15.0
+scikit-learn~=1.3.0
+tqdm~=4.66.1
+scipy~=1.11.2
